# http-exceptions

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml  codeql-analysis.yml  deploy.yml  publish-test.yml  publish.yml  test.yml
http_exceptions/: __init__.py  py.typed
src/: .dockerignore  .pypirc  Dockerfile  docker-compose.yaml  mypy.ini  pyproject.toml  requirements.dev.txt  requirements.txt  setup.py
src/http_exceptions/: __init__.py  client_exceptions.py  http_exception.py  server_exceptions.py
src/tests/: test_client_exceptions.py  test_http_exception.py  test_http_exceptions.py  test_server_exceptions.py
tests/: test_client_exceptions.py  test_http_exception.py
