[tool.isort]
line_length = 200
force_single_line = true

skip = [
  "migrations",
  "versions",
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 200
skip-string-normalization = true
include = '.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.env
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--capture=no --log-cli-level=INFO"
testpaths = [
    "tests",
]

[tool.pylint.master]
ignore = [
  "CVS",
  "versions",
  "migrations",
]
ignore-patterns = [
  "versions"
]

[tool.pylint.basic]
good-names = [
  "db",
  "id",
]

[tool.pylint.similarities]
min-similarity-lines = 20
ignore-comments = "yes"
ignore-docstrings = "yes"
ignore-imports = "yes"

[tool.pylint.messages_control]
disable = [
  "missing-module-docstring",
  "missing-function-docstring",
  "too-many-locals",
  "too-many-arguments",
  "too-few-public-methods",
  "logging-fstring-interpolation",
  "missing-class-docstring",
  "line-too-long",
  "fixme",
  "too-many-statements",
  "too-many-branches",
  "too-many-nested-blocks",
  "too-many-instance-attributes",
  "too-many-boolean-expressions",
]
extension-pkg-whitelist = "pydantic"

[tool.pylint.typecheck]
ignored-modules = [
  "alembic.op",
  "alembic.context",
]

[tool.mypy]
[mypy]
ignore_missing_imports = true
disallow_untyped_defs = true

# Warnings
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true

# Miscellaneous
strict_equality = true

# Error messages
show_error_context = true
show_column_numbers = true
show_error_codes = true
# pretty = true
# show_absolute_path = true
